--- a/public/index.html
+++ b/public/index.html
@@ -223,7 +223,7 @@
             var form = document.forms["userForm"];
             var phrase = form.elements["age"].value;
             //phrase.toString();
-            phrase = phrase.replace(/\ /g, '_');
+            //phrase = phrase.replace(/\ /g, '_');
             ParsePhrase(phrase);
             //reset();
         })
