--- a/public/index.html
+++ b/public/index.html
@@ -67,7 +67,7 @@
         // Получение всех пользователей
         function ParsePhrase(phrase) {
             $.ajax({
-                url: "/api/easyrp/solution/developer/version/easyRP_ID/" + phrase,
+                url: "/api/easyrp/УправлениеТорговлейДляБеларуси/Фирма '1С'/20/any/" + phrase,
                 type: "GET",
                 contentType: "application/json",
                 success: function (parseResult) {
