defsan defs index

--- a/public/sets.html
+++ b/public/sets.html
@@ -45,14 +45,14 @@
           <th>EasyRP_ID</th>
           <th>obj</th>
           <th>sortMoney</th>
-          <th>sortMoneyPath</th>
+          <th>sortPathMoney</th>
           <th>sortPeriod</th>
-          <th>sortPeriodPath</th>
+          <th>sortPathPeriod</th>
           <th>executor</th>
-          <th>executorPath</th>
-          <th>docPath</th>
+          <th>pathExecutor</th>
+          <th>pathDoc</th>
           <th>storage</th>
-          <th>storagePath</th>
+          <th>pathStorage</th>
           <th></th></tr></thead>
         <tbody>
         </tbody>
@@ -198,10 +198,10 @@
             return       "<tr><td>" + user.Solution + "</td>" + "<td>" + user.Developer + "</td>" +
                    "<td>" + user.Version + "</td>" + "<td>" + user.EasyRP_ID + "</td>" +
                    "<td>" + user.obj + "</td>" + "<td>" + user.sortMoney + "</td>" +
-                   "<td>" + user.sortMoneyPath + "</td>" + "<td>" + user.sortPeriod + "</td>" +
-                   "<td>" + user.sortPeriodPath + "</td>" + "<td>" + user.executor + "</td>" +
-                   "<td>" + user.executorPath + "</td>" + "<td>" + user.docPath + "</td>" +
-                   "<td>" + user.storage + "</td>" + "<td>" + user.storagePath + "</td></tr>";
+                   "<td>" + user.sortPathMoney + "</td>" + "<td>" + user.sortPeriod + "</td>" +
+                   "<td>" + user.sortPathPeriod + "</td>" + "<td>" + user.executor + "</td>" +
+                   "<td>" + user.pathExecutor + "</td>" + "<td>" + user.pathDoc + "</td>" +
+                   "<td>" + user.storage + "</td>" + "<td>" + user.pathStorage + "</td></tr>";
         }
         // сброс значений формы
         $("#reset").click(function (e) {
