--- a/public/defs.html
+++ b/public/defs.html
@@ -39,10 +39,10 @@
     <table class="table table-condensed table-striped table-bordered">
         <thead><tr>
           <!-- <th>Id</th> -->
-          <th>Solution</th>
-          <th>Developer</th>
-          <th>Version</th>
-          <th>EasyRP_ID</th>
+          <th>solution</th>
+          <th>developer</th>
+          <th>version</th>
+          <th>easyRP_ID</th>
           <th>obj</th>
           <th>area</th>
           <th>objType</th>
@@ -192,8 +192,8 @@
         // создание строки для таблицы
         var row = function (user) {
             //return "<tr data-rowid='" + user._id + "'><td>" + user._id + "</td>" +
-            return       "<tr><td>" + user.Solution + "</td>" + "<td>" + user.Developer + "</td>" +
-                   "<td>" + user.Version + "</td>" + "<td>" + user.EasyRP_ID + "</td>" +
+            return       "<tr><td>" + user.solution + "</td>" + "<td>" + user.developer + "</td>" +
+                   "<td>" + user.version + "</td>" + "<td>" + user.easyRP_ID + "</td>" +
                    "<td>" + user.obj + "</td>" + "<td>" + user.area + "</td>" +
                    "<td>" + user.objType + "</td>" + "<td>" + user.pf + "</td>" +
                    "<td>" + user.result + "</td>" + "<td>" + user.resultType + "</td>" +
