--- a/public/index.html
+++ b/public/index.html
@@ -69,7 +69,7 @@
         // Получение всех пользователей
         function ParsePhrase(phrase) {
             $.ajax({
-                url: "/api/easyrp/УправлениеТорговлейДляБеларуси/Фирма '1С'/2.0/any/0/" + phrase,
+                url: "/api/easyrp/УправлениеПроизводственнымПредприятием/Фирма \"1С\"/1.2/any/0/" + phrase,
                 type: "GET",
                 contentType: "application/json",
                 success: function (parseResult) {
