--- a/public/sets.html
+++ b/public/sets.html
@@ -53,7 +53,7 @@
           <th>pathDoc</th>
           <th>storage</th>
           <th>pathStorage</th>
-          <th>defaultIndicatiors</th>
+          <th>defaultIndicators</th>
           <th></th></tr></thead>
         <tbody>
         </tbody>
@@ -202,7 +202,7 @@
                    "<td>" + user.sortPathMoney + "</td>" + "<td>" + user.sortPeriod + "</td>" +
                    "<td>" + user.sortPathPeriod + "</td>" + "<td>" + user.executor + "</td>" +
                    "<td>" + user.pathExecutor + "</td>" + "<td>" + user.pathDoc + "</td>" +
-                   "<td>" + user.storage + "</td>" + "<td>" + user.pathStorage + "</td>" + "<td>" + user.defaultIndicatior +  "</td>" + "</tr>";
+                   "<td>" + user.storage + "</td>" + "<td>" + user.pathStorage + "</td>" + "<td>" + user.defaultIndicators +  "</td>" + "</tr>";
         }
         // сброс значений формы
         $("#reset").click(function (e) {
